[safi] update: pushing modified code for to clone git for aws
