# src/routes/note.routes.ts
@@ -1,6 +1,6 @@
 import express from "express";
 import userAuth from '../middlewares/auth.middleware';
-import { create, getNote, getUserNotes, updateNote, deletePermanently, toggleArchive, toggleTrash, search } from '../controllers/note.controller'
+import { create, getNote, getUserNotes, updateNote, deletePermanently, toggleArchive, toggleTrash, search, changeColor } from '../controllers/note.controller'
 import { validateNote, validateUpdateNote } from "../validation/note.validation";
 import { cacheNotesByUserId } from '../middlewares/redis.middleware';
 
@@ -24,6 +24,8 @@ noteRouter.delete('/:id', userAuth, deletePermanently);
 noteRouter.put('/archive/:id', userAuth, toggleArchive);
 
 noteRouter.put('/trash/:id', userAuth, toggleTrash);
+
+noteRouter.put('/color/:id',userAuth , changeColor)
 
 
 export default noteRouter;
